--- a/detail.html
+++ b/detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forum</title>
+    <title>INFINTY GEN-CLOUD</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -23,7 +23,7 @@
                 </ul>
             </nav>
             <a class="bar-icon" id="iconBar" onclick="hideIconBar()"><i class="fa fa-bars"></i></a>
-            <div class="brand">My Forum</div>
+            <div class="brand">INFINTY SERVICES</div>
         </div>
         <!--SearchBox Section-->
         <div class="search-box">
@@ -40,7 +40,7 @@
     <div class="container">
         <!--Navigation-->
         <div class="navigate">
-            <span><a href="">MyForum - Forums</a> >> <a href="">random subforum</a> >> <a href="">random topic</a></span>
+            <span><a href="">INFINTYGEN-CLOUD</a> >> <a href="">random subforum</a> >> <a href="">random topic</a></span>
         </div>
 
         <!--Topic Section-->
@@ -66,7 +66,7 @@
                     Nothing more and nothing less.
                     <br>
                     <hr>
-                    Regards username
+                    Regards InfinityGen-Cloud
                     <br>
                     <div class="comment">
                         <button onclick="showComment()">Comment</button>
@@ -144,7 +144,7 @@
 
     </div>
     <footer>
-        <span>&copy;  Selmi Abderrahim | All Rights Reserved</span>
+        <span>&copy; INFINTYGEN CLOUD ©️ 2022</span>
     </footer>
     <script src="main.js"></script>
 </body>
