--- a/forums.html
+++ b/forums.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forum</title>
+    <title>INFINTY SERVICES</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -23,7 +23,7 @@
                 </ul>
             </nav>
             <a class="bar-icon" id="iconBar" onclick="hideIconBar()"><i class="fa fa-bars"></i></a>
-            <div class="brand">My Forum</div>
+            <div class="brand">INFINTY SERVICES</div>
         </div>
         <!--SearchBox Section-->
         <div class="search-box">
@@ -41,14 +41,14 @@
     <div class="container">
         <div class="subforum">
             <div class="subforum-title">
-                <h1>General Information</h1>
+                <h1>Information</h1>
             </div>
             <div class="subforum-row">
                 <div class="subforum-icon subforum-column center">
                     <i class="fa fa-car center"></i>
                 </div>
                 <div class="subforum-description subforum-column">
-                    <h4><a href="#">Description Title</a></h4>
+                    <h4><a href="#">Description Tie</a></h4>
                     <p>Description Content: let's try to be cool, otherwise,w at 'sthe point in libing together with people youdont' live.</p>
                 </div>
                 <div class="subforum-stats subforum-column center">
@@ -212,11 +212,11 @@
                     <i class="fa fa-car center"></i>
                 </div>
                 <div class="subforum-description subforum-column">
-                    <h4><a href="#">Description Title</a></h4>
-                    <p>Description Content: let's try to be cool, otherwise,w at 'sthe point in libing together with people youdont' live.</p>
+                    <h4><a href="#">Services</a></h4>
+                    <p>Description Content: We provide 24/7 support with limitless happiness , free and premium items,shops,generator,bots and cloud !</p>
                 </div>
                 <div class="subforum-stats subforum-column center">
-                    <span>24 Posts | 12 Topics</span>
+                    <span>0 Posts | 0 Topics</span>
                 </div>
                 <div class="subforum-info subforum-column">
                     <b><a href="">Last post</a></b> by <a href="">JustAUser</a> 
@@ -232,7 +232,7 @@
     <!-- Forum Info -->
     <div class="forum-info">
         <div class="chart">
-            MyForum - Stats &nbsp;<i class="fa fa-bar-chart"></i>
+            Infinity Gen - Stats &nbsp;<i class="fa fa-bar-chart"></i>
         </div>
         <span><u>5,369</u> Posts in <u>48</u> Topics by <u>8,124</u> Members.</span><br>
         <span>Latest post: <b><a href="">Random post</a></b> on Dec 15 2021 By <a href="">RandomUser</a></span>.<br>
