--- a/detail.html
+++ b/detail.html
@@ -23,7 +23,7 @@
                 </ul>
             </nav>
             <a class="bar-icon" id="iconBar" onclick="hideIconBar()"><i class="fa fa-bars"></i></a>
-            <div class="brand">INFINTY SERVICES</div>
+            <div class="brand">A-PEER Check</div>
         </div>
         <!--SearchBox Section-->
         <div class="search-box">
@@ -143,9 +143,6 @@
         
 
     </div>
-    <footer>
-        <span>&copy; INFINTYGEN CLOUD ©️ 2022</span>
-    </footer>
     <script src="main.js"></script>
 </body>
 </html>
